--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     },
     "license": "GPL-3.0-or-later",
     "dependencies": {
-        "@adiwajshing/baileys": "npmjs:@whiskeysockets/baileys",
+        "@adiwajshing/baileys": "npm:@whiskeysockets/baileys",
         "@adiwajshing/keyed-db": "^0.2.4",
         "@bochilteam/scraper": "^2.0.0",
         "@shineiichijo/nhentai-ts": "^1.0.0",
